--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -57,10 +57,24 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
-
-</script>
-
-
+  <script>
+    document.addEventListener("keydown", function(event) {
+      code = event.keyCode;
+      const div = document.querySelector(`div[data-key='${code}']`), audio = document.querySelector(`audio[data-key='${code}']`);
+      if (div) {
+        div.classList.add("playing");
+        audio.play();
+        audio.currentTime = 0;
+      };
+    });
+    const keys = document.querySelectorAll(".key");
+    for(let i = 0; i < keys.length; i++) {
+      keys[i].addEventListener("transitionend", function(event){
+        if (event.propertyName === "transform") {
+          event.target.classList.remove("playing");
+        };
+      });
+    }
+  </script>
 </body>
 </html>
