--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,34 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transition: all 0.5s;
     }
 
   </style>
 
   <script>
-
-
+    const hour = document.querySelector(".hour-hand"),
+      minute = document.querySelector(".min-hand"),
+      second = document.querySelector(".second-hand");
+    function clockWrap (element, timer, threshhold) {
+      if(timer + 1 === threshhold) {
+        element.style.transition = "inherit";
+      } else if (timer - 1 === threshhold) {
+        element.style.transition = "all 0.5s";
+      }
+    }
+    setInterval(function(){
+      const time = new Date();
+      const hours = time.getHours(),
+        minutes = time.getMinutes(),
+        seconds = time.getSeconds();
+      clockWrap(second, seconds, 60);
+      clockWrap(minute, minutes, 60);
+      hour.style.transform = `rotate(${hours % 12 / 12 * 360 + 90}deg)`;
+      minute.style.transform = `rotate(${minutes / 60 * 360 + 90}deg)`;
+      second.style.transform = `rotate(${seconds / 60 * 360 + 90}deg)`;
+    },1000);
   </script>
 </body>
 </html>
