--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,22 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const fullYear = new Date().getFullYear();
+    const q1 = people.some(p => p.year < (fullYear - 19));
     // Array.prototype.every() // is everyone 19 or older?
+    const q2 = people.every(p => p.year < (fullYear - 19));
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const q3 = comments.findIndex(comment => comment.id === 823423);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const q4 = comments.findIndex(comment => comment.id === 823423);
+    const comments2 = [...comments];
+    comments2.splice(q4,1);
 
   </script>
 </body>
